style.css
.roboto-font {
  font-family: "Roboto", sans-serif;
  font-optical-sizing: auto;
  font-weight: <weight>;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
}
.bebas-neue-regular {
  font-family: "Bebas Neue", sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 80px;
}







.color{
    color: #FA804C;
}

.nav-left-side img{

    height: 39px;
    width: 290px;
}
.nav-right-side a{
    text-decoration: none;
   
}
.nav-right-side{
    display: flex;
    gap: 57px;

}
.navbar{
    padding-top: 20px;
    display: flex;
    flex-direction: row;
    align-items: center;
    
    justify-content: space-between;
    
    
}
.entire-color{
    background-color: #FFF9F4;
  
}
.banner-left-side {
   
   
}
.child  img{
   
     height: 407px;
    width: 407px;
}
.banner{
    padding: 100px;
 column-gap:193px;
    display: flex;
    align-items: center;
    justify-content:center

}

.box{
    border-radius: 20px;
    height: 70px;
    width: 170px;
    background-color: #3543BC;
    display: flex;
    align-items: center;
    justify-content: center;
}
.box img{
    height: 24px;
    width: 24px;
}
button{
    background-color: #3543BC;
    border: none;
    color: white;
}
.shoes{
    /* background-color: rgb(184, 42, 61); */
}
.container{
    height: 550px;
    width: 1180px;
    margin: 50px auto;
    /* background-color: aqua; */
}
.card{
     padding: 20px ;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);

    height: 100%;
    width: 370px;
 background-color: #FFFFFF;
   border-radius: 30px;
}
.card-img img{
   
    border-radius: 20px;
    background-color: #F1F1F1;
    height: 327px;
    width: 334px;
} 
.card-sec{
    gap: 20px;
    display: flex;
   justify-content: space-evenly;
}








.card-footer img{
    height: 24px;
    width: 24px;
}
.card-footer{

    display: flex;
    align-items: center;
    justify-content: space-between;
    /* gap: 50px; */
    padding: 0 20px;
    
}
/* .card-footer-2{
    background-color: #3543BC;
    display: flex;
    align-items: center;
} */

.footer{
    align-items: center;
    justify-content: center;
    display: flex;
    gap: 83px;
}




 .footer-text{
    font-weight: bold;
    font-size: 36px;
    color: #FA804C;
 }
 .left-side img{
 height: 82px;
 width: 78px;
 }
 .first-div{
    display: flex;
    height: 135px;
    width: 479px;
    
    align-items: center;
    gap: 10px;
    
 }

 .right-side{
   
 }

.last-right-side img{
width: 599px;
    height: 355px;
}

/* .hide{
    display: none;
} */
.menu{
    display: none;
}
 

/* media query */
@media screen and (max-width:576px) {
 /* nav sec */
 .nav-right-side{
    display: none;
    
 }
 .banner
{
       flex-direction: column-reverse;

}
h1{
    margin-top: 30px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}
.child  img{
    height: auto;
    width: 100%;
    
}
.container {
    width: 100%;
    margin: 20px auto;
   
    height: auto; 
  }

  .card-sec {
    flex-direction: column;
    gap: 20px;
    align-items: center;
  }

  .card {
    width: 100%;
    max-width: 100%;
    box-sizing: border-box;
  }

  .card-img img {
    width: 100%;
    height: auto;
  }





.footer{
    flex-direction: column-reverse;
   
   
}
.last-right-side img{
width: 100%;
    height: auto;
}
.first-div{
    flex-direction: column;
    height: auto; 
}

 .first-div{
    
    height: auto;
    width: 100%;
    
    align-items: center;
    gap: 10px;
    
 }




















    
}

/* img problem */

